app/assets/styles/modules/_form.css
.form {
  &--required {
    color: red;
    font-style: italic;
  }
  &--phone {
    display: none;
  }
  input {
    width: 100%;
    padding: 5px;
    border: 1px solid #000;
    background-color: #fff;
    border-radius: 4px;
    resize: vertical;
  }
  &--ta {
    width: 100%;
    padding: 5px;
    border: 1px solid #000;
    background-color: #fff;
    border-radius: 4px;
  }
  button {
    font-size: 1.5rem;
    cursor: pointer;
    padding: 5px 20px;
    border-radius: 4px;
    border: 1px solid #000;
    &:hover {
      background-color: #dedfe3;
    }
  }

  &--field-separation {
    padding-top: 30px;
  }
  &--button-spacing {
    padding-top: 10px;
  }

  &--section {
    padding-top: 20px;
    padding-bottom: 10px;
  }

  @mixin atMin1200Wide {
    input {
      width: 50%;
    }
    &--ta {
      width: 50%;
      max-width: 90%;
    }
  }
}

